--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -18,8 +18,10 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@color/cyan1"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_main_page"
+        app:itemBackground="@android:color/background_light"
         app:menu="@menu/activity_main_page_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
