--- a/app/src/main/res/layout/content_main_page.xml
+++ b/app/src/main/res/layout/content_main_page.xml
@@ -8,4 +8,15 @@
     tools:context="com.example.user.finsecapp.mainPage"
     tools:showIn="@layout/app_bar_main_page">
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="wrap_content"
+        android:layout_height="596dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@color/cyan1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/stock"
+        tools:layout_editor_absoluteX="0dp" />
 </android.support.constraint.ConstraintLayout>
