--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -5,9 +5,10 @@
     android:id="@+id/item_list"
     android:name="com.example.user.finsecapp.ItemListFragment"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
+    android:paddingTop="0dp"
     app:layoutManager="LinearLayoutManager"
     tools:context="com.example.user.finsecapp.ItemListActivity"
     tools:listitem="@layout/item_list_content" />
