--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/backgrounda"
+    android:background="@drawable/fino"
     tools:context="com.example.user.finsecapp.account">
 
     <TextView
@@ -17,6 +17,7 @@
         android:layout_marginLeft="32dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="39dp"
+        android:background="@android:color/white"
         android:foregroundTint="@android:color/background_dark"
         android:text="Name:"
         android:textColor="@android:color/black"
@@ -32,7 +33,7 @@
         android:layout_alignParentRight="true"
         android:layout_marginEnd="31dp"
         android:layout_marginRight="31dp"
-        android:backgroundTint="@color/colorPrimary"
+        android:background="@android:color/white"
         android:ems="10"
         android:foregroundTint="@android:color/background_light"
         android:inputType="textPersonName|number"
@@ -42,14 +43,13 @@
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView2"
         android:layout_alignStart="@+id/textView2"
         android:layout_below="@+id/editText"
-        android:layout_marginTop="62dp"
-        android:backgroundTint="@color/colorPrimary"
+        android:layout_marginTop="64dp"
+        android:background="@android:color/white"
         android:text="Balance:"
         android:textColor="@android:color/black"
-        android:textSize="24sp" />
+        android:textSize="22sp" />
 
     <EditText
         android:id="@+id/editText2"
@@ -57,7 +57,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView3"
         android:layout_alignStart="@+id/editText"
-        android:backgroundTint="@color/colorPrimary"
+        android:background="@android:color/white"
         android:ems="10"
         android:inputType="number"
         android:textColor="@android:color/black" />
@@ -69,26 +69,29 @@
         android:layout_alignStart="@+id/textView3"
         android:layout_below="@+id/editText2"
         android:layout_marginTop="123dp"
-        android:text="Currency:"
+        android:background="@android:color/white"
+        android:text="Choose your currency:"
         android:textColor="@android:color/black"
-        android:textSize="24sp" />
+        android:textSize="30sp" />
 
     <Spinner
         android:id="@+id/spinner"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/textView4"
-        android:layout_marginTop="26dp" />
+        android:layout_marginTop="22dp"
+        android:background="@android:color/white"
+        android:padding="30dp"
+        android:paddingLeft="30dp" />
 
     <Button
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/editText2"
-        android:layout_alignRight="@+id/editText2"
         android:layout_below="@+id/spinner"
-        android:layout_marginTop="90dp"
-        android:backgroundTint="@color/colorPrimary"
+        android:layout_marginTop="36dp"
+        android:background="@android:color/white"
         android:text="ADD" />
 </RelativeLayout>
