--- a/app/src/main/res/layout/activity_expenses.xml
+++ b/app/src/main/res/layout/activity_expenses.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/backgrounda"
-    tools:context="com.example.user.finsecapp.incomeExpenses">
+    tools:context="com.example.user.finsecapp.expenses">
 
     <TextView
         android:id="@+id/textView"
@@ -49,13 +49,12 @@
         android:textSize="24sp" />
 
     <Spinner
-        android:id="@+id/spinner3"
-        android:layout_width="200sp"
-        android:layout_height="50sp"
+        android:id="@+id/spinner4"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/editText3"
         android:layout_alignStart="@+id/editText3"
-        android:layout_alignBottom="@+id/textView5"
-        android:textSize="30sp"/>
+        android:layout_alignTop="@+id/textView5" />
 
     <TextView
         android:id="@+id/textView6"
@@ -74,8 +73,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/textView6"
-        android:layout_alignLeft="@+id/spinner3"
-        android:layout_alignStart="@+id/spinner3"
+        android:layout_alignLeft="@+id/spinner4"
+        android:layout_alignStart="@+id/spinner4"
         android:backgroundTint="@color/colorPrimary"
         android:ems="8"
         android:inputType="number" />
@@ -117,9 +116,8 @@
         android:id="@+id/image"
         android:layout_width="50sp"
         android:layout_height="50sp"
-        android:layout_centerVertical="true"
-        android:layout_toEndOf="@+id/editText5"
-        android:layout_toRightOf="@+id/editText5"
+        android:layout_above="@+id/button2"
+        android:layout_alignStart="@+id/imageButton"
         android:src="@drawable/calendar" />
 
     <Button
@@ -127,9 +125,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/editText3"
-        android:layout_alignRight="@+id/editText3"
         android:layout_below="@+id/editText5"
-        android:layout_marginTop="73dp"
+        android:layout_marginTop="76dp"
         android:backgroundTint="@color/colorPrimary"
         android:text="OK" />
+
 </RelativeLayout>
