--- a/app/src/main/res/layout/content_main_page.xml
+++ b/app/src/main/res/layout/content_main_page.xml
@@ -1,40 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/a3"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.example.user.finsecapp.mainPage"
-    tools:showIn="@layout/app_bar_main_page">
+    >
 
-    <ImageButton
-        android:id="@+id/imageButton2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="37dp"
-        android:layout_marginStart="37dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/a2" />
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark">
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true">
 
-    <ImageButton
-        android:id="@+id/imageButton3"
-        android:layout_width="160dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/abc" />
 
-    <ImageButton
-        android:id="@+id/imageButton4"
-        android:layout_width="225dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
-        app:layout_constraintBottom_toTopOf="@+id/imageButton2"
-        app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/a1" />
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/imageButton2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="10dp"
+            android:layout_row="0"
+            android:layout_rowWeight="1"
+            android:background="@drawable/t1"
+            android:paddingTop="10dp"
+            android:text="BitCoin" />
+
+        <Button
+            android:id="@+id/imageButton3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="10dp"
+            android:layout_row="0"
+            android:layout_rowWeight="1"
+            android:background="@drawable/t2"
+            android:text="Budget" />
+
+        <Button
+            android:id="@+id/imageButton4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_column="0"
+            android:layout_columnSpan="2"
+            android:layout_columnWeight="1"
+            android:layout_gravity="fill"
+            android:layout_margin="10dp"
+            android:layout_row="1"
+            android:layout_rowWeight="1"
+            android:background="@drawable/abc"
+            android:text="news" />
+
+    </GridLayout>
+
+</RelativeLayout>
